# Quant

./: .gitignore  CHANGES_FOR_CLAUDE_CODE.md  README.md  STRATEGY.md  csema-quant-algo-prompt.md  pyproject.toml  requirements.txt  setup.sh
config/: settings.yaml
csequant/: __init__.py  __main__.py  cli.py  config.py  logging_conf.py  pipeline.py  schema.py
csequant/backtest/: __init__.py  benchmark.py  costs.py  engine.py  metrics.py
csequant/data/: __init__.py  service.py  universe.py
csequant/data/providers/: __init__.py  base.py  casablanca.py  offline.py  tvdatafeed_provider.py
csequant/data/storage/: __init__.py  cache.py
csequant/explainability/: __init__.py  reasoning.py
csequant/gui/: __init__.py  app.py  state.py
csequant/gui/views/: __init__.py  market_view.py  portfolio_view.py  trades_view.py
csequant/live/: __init__.py  scheduler.py
csequant/risk/: __init__.py  portfolio_optimizer.py  position_sizing.py
csequant/strategies/: __init__.py  base.py  factor_model.py  indicators.py  mean_reversion.py  momentum.py
data_cache/: cse.db
data_cache/parquet/: ohlcv.parquet
reports/: backtest_report.md
scripts/: build_cache.py
tests/: conftest.py  test_backtest_pnl.py  test_costs.py  test_engine.py  test_indicators.py  test_mean_reversion.py  test_optimizer.py  test_reasoning.py  test_schema_cache.py
